Code examples in ICHPS2020-svy.stmd

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,10 @@ iftex.sty
 iftex.tex
 ifvtex.sty
 ifxetex.sty
+ichps2020-svy.R
+ichps2020-svy.do
+ichps2020-svy.err
+nhanes2.dta
+ichps2020-svy.pdx
+ichps2020-svy.rout
+Rplots.pdf
